# pulsar-accretion-disk-interactions

./: README.md  pulsar_IR_flare_test.py  pyproject.toml  sgr_a_observations.txt  single_pulsar.py
tables/: ANTF_spin_down_luminosity_pulsar_catalog.txt  README.md  __init__.py  sgr_a_observations.txt  sgr_a_observations_IR_frequency.txt  sgr_a_observations_IR_luminosity.txt  sgr_a_observations_radio_frequency.txt  sgr_a_observations_radio_luminosity.txt  sgr_a_observations_xray_frequency.txt  sgr_a_observations_xray_luminosity.txt  single_part_emissivity_f_store.txt  single_part_emissivity_x_store.txt
